gcc/testsuite/rust/rustc/ui/inference/issue-71309.rs
fn foo(x: Result<i32, ()>) -> Result<(), ()> {
    let y: u32 = x?;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
    Ok(())
}

fn main() {}

